[project]
name = "sdx-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Edmond Chuc", email = "edmond@kurrawong.ai" }
]
requires-python = ">=3.14"
dependencies = [
    "confluent-kafka>=2.13.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "prometheus-client>=0.22.0",
    "structlog>=25.2.0",
    "tenacity>=9.1.2",
    "faststream[confluent,otel]>=0.6.6,<0.7.0",
    "uvicorn>=0.40.0",
    "fastapi>=0.129.0",
    "opentelemetry-exporter-otlp>=1.39.1",
]

[dependency-groups]
dev = [
    "coverage[toml]>=7.13.2",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-httpx>=0.36.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.14.14",
    "testcontainers>=4.14.0",
]
release = [
    "python-semantic-release>=10,<11",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
build_command = """
    uv lock --upgrade-package "$PACKAGE_NAME"
    git add uv.lock
"""

[tool.ruff]
target-version = "py314"
line-length = 88
extend-exclude = [".venv"]

[tool.ruff.lint]
select = [
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "PIE", # flake8-pie
    "SIM", # flake8-simplify
    "UP",  # pyupgrade
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.14"
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false
disallow_untyped_decorators = false
check_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "strict"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sdx_core"]
